--- a/public/assignment/css/dashboard.css
+++ b/public/assignment/css/dashboard.css
@@ -103,3 +103,11 @@ body {
     display: inline-block;
     border-radius: 50%;
 }
+
+.sort-glyphicon{
+    font-size: 0.75em;
+}
+
+.action-glyphicon{
+    font-size: 1.25em;
+}
