--- a/public/assignment/css/dashboard.css
+++ b/public/assignment/css/dashboard.css
@@ -109,5 +109,22 @@ body {
 }
 
 .action-glyphicon{
-    font-size: 1.25em;
+    font-size: 2.0em;
+}
+
+.table-input{
+    width: 75%;
+    height: 30px;
+}
+.table-content-nowrap{
+    white-space: nowrap;
+}
+
+.field-row{
+    padding-top: 5px;
+}
+
+.label-field {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
