--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -1,21 +1,22 @@
-.sort-glyphicon{
+.sort-glyphicon {
     font-size: 0.75em;
 }
 
-.action-glyphicon{
+.action-glyphicon {
     font-size: 2.0em;
 }
 
-.table-input{
+.table-input {
     width: 75%;
     height: 30px;
 }
-.table-content-nowrap{
+
+.table-content-nowrap {
     white-space: nowrap;
 }
 
-.field-row{
-    padding-top: 5px;
+.row {
+    padding-top: 10px;
 }
 
 .label-field {
