--- a/public/experiments/css/spotify_style.css
+++ b/public/experiments/css/spotify_style.css
@@ -1,17 +1,15 @@
-.embed-container {
+html {
     position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    height: auto;
+    min-height: 100%;
 }
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 100%;
+    /* Set the fixed height of the footer here */
+    height: 80px; !important;
 }
