--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -12,10 +12,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#/register">Register</a></li>
-                    <li><a href="#/login">Login</a></li>
-                    <li><a href="#">Username</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/register'}"><a href="#/register">Register</a></li>
+                    <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/login'}"><a href="#/login">Login</a></li>
+                    <li ng-if="loggedIn"><a href="#">{{user.username}}</a></li>
+                    <li ng-if="loggedIn"><a href="#" ng-click="logout()">Logout</a></li>
                 </ul>
             </div>
         </div>
