--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,11 +1,11 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Profile</h1>
-            <form class="form-horizontal" action="profile.html">
+            <form class="form-horizontal">
                 <div class="form-group">
                     <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
                     </label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control" id="inputusername3" placeholder="Username">
+                        <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username" readonly>
                     </div>
                     <div class="col-sm-3">
                     </div>
@@ -15,7 +15,7 @@
                     <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
                     </label>
                     <div class="col-sm-6">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
                     <div class="col-sm-3">
                     </div>
@@ -23,7 +23,7 @@
                 <div class="form-group">
                     <label for="firstrname3" class="col-sm-3 control-label"><p class="text-left">First Name:</p></label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control" id="firstrname3" placeholder="First Name">
+                        <input type="text" ng-model="user.firstName" class="form-control" id="firstrname3" placeholder="First Name">
                     </div>
                     <div class="col-sm-3">
                     </div>
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <label for="lastrname3" class="col-sm-3 control-label"><p class="text-left">Last Name:</p></label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control" id="lastrname3" placeholder="Last Name">
+                        <input type="text" ng-model="user.lastName" class="form-control" id="lastrname3" placeholder="Last Name">
                     </div>
                     <div class="col-sm-3">
                     </div>
@@ -39,14 +39,14 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
                     <div class="col-sm-6">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" ng-model="user.email" class="form-control" id="inputEmail3" placeholder="Email">
                     </div>
                     <div class="col-sm-3">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-6">
-                        <button type="submit" class="btn btn-default btn-block">Update</button>
+                        <button ng-click="update(user)" class="btn btn-default btn-block">Update</button>
                     </div>
                     <div class="col-sm-3">
                     </div>
