--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -1,12 +1,12 @@
 
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-controller="RegisterController">
             <h1 class="page-header">Register</h1>
-            <form class="form-horizontal" action="profile.html">
+            <form class="form-horizontal"><!-- action="#/profile/{{user.username}}">-->
                 <div class="form-group">
                     <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
                     </label>
                     <div class="col-sm-6">
-                        <input type="text" class="form-control" id="inputusername3" placeholder="Username">
+                        <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username">
                     </div>
                     <div class="col-sm-3">
                     </div>
@@ -16,7 +16,7 @@
                     <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
                     </label>
                     <div class="col-sm-6">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
                     </div>
                     <div class="col-sm-3">
                     </div>
@@ -33,14 +33,14 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
                     <div class="col-sm-6">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" ng-model="user.email" class="form-control" id="inputEmail3" placeholder="Email">
                     </div>
                     <div class="col-sm-3">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-6">
-                        <button type="submit" class="btn btn-default btn-block">Register</button>
+                        <button ng-click="register(user)" class="btn btn-default btn-block">Register</button>
                     </div>
                     <div class="col-sm-3">
                     </div>
