--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -1,11 +1,11 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-controller="LoginController">
     <h1 class="page-header">Login</h1>
-    <form class="form-horizontal" action="#/profile">
+    <form class="form-horizontal">
         <div class="form-group">
             <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
             </label>
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputusername3" placeholder="Username">
+                <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username">
             </div>
             <div class="col-sm-3">
             </div>
@@ -15,14 +15,14 @@
             <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
             </label>
             <div class="col-sm-6">
-                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
             </div>
             <div class="col-sm-3">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-6">
-                <button type="submit" class="btn btn-default btn-block">Login</button>
+                <button ng-click="login(user)"  class="btn btn-default btn-block">Login</button>
             </div>
             <div class="col-sm-3">
             </div>
