--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -5,7 +5,7 @@
             <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
             </label>
             <div class="col-sm-6">
-                <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username">
+                <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username" required>
             </div>
             <div class="col-sm-3">
             </div>
@@ -15,14 +15,16 @@
             <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
             </label>
             <div class="col-sm-6">
-                <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
+                <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password" required>
+                <span class="label label-danger" ng-show="wrongpassword">Invalid Username/Password.</span>
             </div>
             <div class="col-sm-3">
             </div>
         </div>
+
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-6">
-                <button ng-click="login(user)"  class="btn btn-default btn-block">Login</button>
+                <button ng-click="login(user)"  type="submit" class="btn btn-default btn-block">Login</button>
             </div>
             <div class="col-sm-3">
             </div>
