--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -5,7 +5,8 @@
             <label for="inputusername3" class="col-sm-3 control-label"><p class="text-left">Username:</p>
             </label>
             <div class="col-sm-6">
-                <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username">
+                <input type="text" ng-model="user.username" class="form-control" id="inputusername3" placeholder="Username" required>
+                <span class="label label-danger" ng-show="usernameexists">Username already exists.</span>
             </div>
             <div class="col-sm-3">
             </div>
@@ -15,7 +16,7 @@
             <label for="inputPassword3" class="col-sm-3 control-label"><p class="text-left">Password:</p>
             </label>
             <div class="col-sm-6">
-                <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password">
+                <input type="password" ng-model="user.password" class="form-control" id="inputPassword3" placeholder="Password" required>
             </div>
             <div class="col-sm-3">
             </div>
@@ -24,7 +25,8 @@
             <label for="inputVPassword3" class="col-sm-3 control-label"><p class="text-left text-nowrap">Verify
                 Password:</p></label>
             <div class="col-sm-6">
-                <input type="password" class="form-control" id="inputVPassword3" placeholder="Password">
+                <input type="password" ng-model="user.vpassword" class="form-control" id="inputVPassword3" placeholder="Password" required>
+                <span class="label label-danger" ng-show="passwordsdonotmatch">Passwords do not match.</span>
             </div>
             <div class="col-sm-3">
             </div>
