Adding header navigations and client side services. Adding Login functionality.

--- a/public/project/view/header/header.view.html
+++ b/public/project/view/header/header.view.html
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container" ng-controller="HeaderController">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
             <span class="sr-only">Toggle navigation</span>
@@ -11,8 +10,11 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-            <li><a href="#/login">Login/Register</a></li>
+            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/'}"><a href="#">Home</a></li>
+            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/login'}"><a href="#/login">Login/Register</a></li>
+            <li ng-if="loggedIn" ng-class="{'active':$location.url().indexOf('/profile') > 0}"><a href="#/profile/{{user.username}}">Profile</a></li>
+            <li ng-if="loggedIn" ng-class="{'active':$location.url().indexOf('/playlist') > 0}"><a href="#/playlist/{{user.username}}">My Playlists</a></li>
+            <li ng-if="loggedIn"><a ng-click="logout()">Logout</a></li>
         </ul>
     </div>
 </div>
