--- a/public/project/view/directive/search.directive.html
+++ b/public/project/view/directive/search.directive.html
@@ -1,9 +1,9 @@
-<div class="container" ng-controller="SearchDirectiveController">
-    <div class="row myrow">
+<div class="container col-md-12" ng-controller="SearchDirectiveController">
+    <div class="row">
         <div class="form-group">
             <label class="control-label sr-only">Search</label>
             <div class="input-group">
-                <input type="search" class="form-control" placeholder="Search for a Playlist.." ng-model="playlistName">
+                <input type="search" class="form-control" placeholder="Search for a Playlist.." ng-model="playlistName"/>
                     <span class="input-group-btn">
                       <button class="btn btn-default" type="button" id="search-button" ng-click="searchClick(playlistName)">Search</button>
                     </span>
