--- a/public/project/view/home/home.view.html
+++ b/public/project/view/home/home.view.html
@@ -1,8 +1,7 @@
+
 <div class="container">
-
     <search-control></search-control>
-
-    <div class="row myrow">
+    <div class="row">
         <div class="col-md-12">
             <h2>Welcome!</h2>
             <div>
@@ -11,7 +10,7 @@
             </div>
         </div>
     </div>
-    <div class="row myrow">
+    <div class="row">
         <div class="col-md-6 col-sm-6">
             <h3>Header 2</h3>
             <div>
