Adding Playlist service. Adding My Playlist page to add and rename playlists. Updated the Nav bar.

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -21,4 +21,9 @@ body {
     /* Set the fixed height of the footer here */
     height: 60px; !important;
 }
-
+.valign {
+    vertical-align: middle !important;
+}
+.nowrap {
+    white-space: nowrap;
+}
