--- a/public/project/view/playlist/myplaylist.view.html
+++ b/public/project/view/playlist/myplaylist.view.html
@@ -28,7 +28,8 @@
             <tbody>
                 <tr ng-repeat="playlist in playlists">
                     <td class="valign">
-                        {{playlist.playlistName}}
+                        <a ng-click="editPlaylist(playlist)">{{playlist.playlistName}}</a>
+                        <!--href="#/editplaylist/{{playlist.playlistName}}"-->
                     </td>
                     <td class="nowrap">
                         <button class="fa fa-2x fa-trash-o btn btn-success" ng-click="deletePlaylist($index)"></button>
