--- a/public/project/view/header/header.view.html
+++ b/public/project/view/header/header.view.html
@@ -11,7 +11,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
         <ul class="nav navbar-nav">
             <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/'}"><a href="#">Home</a></li>
-            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/login'}"><a href="#/login">Login/Register</a></li>
+            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/login'}"><a href="#/login">Login</a></li>
+            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/register'}"><a href="#/register">Register</a></li>
             <li ng-if="loggedIn" ng-class="{'active':$location.url().indexOf('/profile') >= 0}"><a href="#/profile/{{user.username}}">Profile</a></li>
             <li ng-if="loggedIn" ng-class="{'active':$location.url().indexOf('/playlist') >= 0}"><a href="#/playlist/{{user.username}}">My Playlists</a></li>
             <li ng-if="loggedIn"><a ng-click="logout()">Logout</a></li>
