--- a/public/project/view/user/profile.view.html
+++ b/public/project/view/user/profile.view.html
@@ -23,13 +23,13 @@
             <div class="form-group">
                 <label for="inputFirstName" class="col-lg-2 control-label">First Name</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" id="inputFirstName" placeholder="Username" ng-model="user.firstName">
+                    <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="user.firstName">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputLastName" class="col-lg-2 control-label">Last Name</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" id="inputLastName" placeholder="Username" ng-model="user.lastName">
+                    <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="user.lastName">
                 </div>
             </div>
             <div class="form-group">
