--- a/public/project/view/user/profile.view.html
+++ b/public/project/view/user/profile.view.html
@@ -3,37 +3,37 @@
         <fieldset>
             <legend>Profile</legend>
             <div class="form-group">
-                <label for="inputUsername" class="col-lg-2 control-label">Username</label>
-                <div class="col-lg-10">
+                <label for="inputUsername" class="col-lg-2 col-md-2 col-sm-2 control-label">Username</label>
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="user.username" readonly>
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputPassword" class="col-lg-2 control-label">Password</label>
-                <div class="col-lg-10">
+                <label for="inputPassword" class="col-lg-2 col-md-2 col-sm-2 control-label">Password</label>
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="user.password">
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-                <div class="col-lg-10">
+                <label for="inputEmail" class="col-lg-2 col-md-2 col-sm-2 control-label">Email</label>
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="user.email">
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputFirstName" class="col-lg-2 control-label">First Name</label>
-                <div class="col-lg-10">
+                <label for="inputFirstName" class="col-lg-2 col-md-2 col-sm-2 control-label">First Name</label>
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <input type="text" class="form-control" id="inputFirstName" placeholder="First Name" ng-model="user.firstName">
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputLastName" class="col-lg-2 control-label">Last Name</label>
-                <div class="col-lg-10">
+                <label for="inputLastName" class="col-lg-2 col-md-2 col-sm-2 control-label">Last Name</label>
+                <div class="col-lg-4 col-md-4 col-sm-6">
                     <input type="text" class="form-control" id="inputLastName" placeholder="Last Name" ng-model="user.lastName">
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-lg-10 col-lg-offset-2">
+                <div class="col-lg-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-md-2 col-sm-2">
                     <button type="submit" class="btn btn-success btn-block" ng-click="updateProfile(user)">Update</button>
                 </div>
             </div>
