--- a/public/project/view/user/register.view.html
+++ b/public/project/view/user/register.view.html
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
                 <div class="col-lg-offset-2 col-lg-2">
-                    <button ng-click="register(user)" class="btn btn-default btn-block">Register</button>
+                    <button ng-click="register(user)" class="btn btn-success btn-block">Register</button>
                 </div>
             </div>
         </form>
