--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -37,9 +37,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Email:</p></label>
+            <label for="inputEmail3" class="col-sm-3 control-label"><p class="text-left">Emails:</p></label>
             <div class="col-sm-6">
-                <input type="email" ng-model="user.email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="text" ng-model="user.emails" class="form-control" id="inputEmail3" placeholder="Email">
             </div>
             <div class="col-sm-3">
             </div>
