--- a/public/assignment/client/views/header/header.view.html
+++ b/public/assignment/client/views/header/header.view.html
@@ -11,12 +11,12 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/register'}"><a href="#/register">Register</a></li>
-            <li ng-if="!(loggedIn)" ng-class="{'active':$location.url()== '/login'}"><a href="#/login">Login</a></li>
-            <li ng-if="loggedIn" ng-class="{'active':$location.url()== '/profile/{{user.username}}'}"><a href="#/profile/{{user.username}}">{{user.username}}</a></li>
-            <li ng-if="loggedIn && user.roles.indexOf('admin')>=0" class="visible-xs" ng-class="{'active':$location.url()== '/admin'}"><a href="#/admin">Admin</a></li>
-            <li ng-if="loggedIn" class="visible-xs" ng-class="{'active':$location.url().indexOf('forms') >= 0}"><a href="#/forms">Forms</a></li>
-            <li ng-if="loggedIn"><a href="#" ng-click="logout()">Logout</a></li>
+            <li ng-if="!(currentUser)" ng-class="{'active':$location.url()== '/register'}"><a href="#/register">Register</a></li>
+            <li ng-if="!(currentUser)" ng-class="{'active':$location.url()== '/login'}"><a href="#/login">Login</a></li>
+            <li ng-if="currentUser" ng-class="{'active':$location.url()== '/profile/{{user.username}}'}"><a href="#/profile/{{currentUser.username}}">{{currentUser.username}}</a></li>
+            <li ng-if="currentUser && currentUser.roles.indexOf('admin')>=0" class="visible-xs" ng-class="{'active':$location.url()== '/admin'}"><a href="#/admin">Admin</a></li>
+            <li ng-if="currentUser" class="visible-xs" ng-class="{'active':$location.url().indexOf('forms') >= 0}"><a href="#/forms">Forms</a></li>
+            <li ng-if="currentUser"><a href="#" ng-click="logout()">Logout</a></li>
         </ul>
     </div>
 </div>
